# AMS-DB

./: .gitignore  README.md  README_UPDATED.md  USAGE.md  comprehensive_demo.py  comprehensive_memory_test_results.json  comprehensive_test.py  expert_coder_agent_template.json  fix_test_imports.py  minecraft_agent_template.json  pyproject.toml  simple_demo.py  simple_demo_safe.py  wizard_agent_template.json
agent_database/: agent_matrix.parquet  conversations.parquet  knowledge_base.parquet
data/: .gitignore  README.md
data/sessions/: active_sessions.json
dev/: debug_test.py  demo.py  demo_basic.py  fix_unicode.py  organize_cleanup.py  simple_demo_safe.py
docs/: ARCHITECTURE.md  BEGINNER_GUIDE.md  CLI_PROMPTS.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  SYSTEM_STATUS.md  TUTORIAL.md  ULTIMATE_CHEATSHEET.md  WORKING_CLI_COMMANDS.md
example_database/: agent_matrix.parquet  conversations.parquet  knowledge_base.parquet
example_graphiti_db/: agent_matrix.parquet  knowledge_base.parquet  templates.parquet
examples/: basic_usage.py  expert_coder_agent.py  minecraft_assistant.py
scripts/: start_services.ps1  start_services.sh
test_db/: agent_matrix.parquet  conversations.parquet
test_jsonl_db/: agent_matrix.parquet  conversations.parquet
test_multiagent_db/: agent_matrix.parquet  research_collection.parquet
tests/: test_agent_config.py  test_chat_manager.py  test_chat_system.py  test_cli_chat.py  test_complete_system.py  test_components_root.py  test_comprehensive_memory_storage.py  test_comprehensive_system.py  test_direct_client.py  test_final_validation.py  test_import_fix.py  test_llm_fix.py  test_neo4j_graphiti.py  test_ollama_direct.py  test_ollama_openai.py  test_ollama_sync.py  test_polars_db.py  test_real_llm.py  test_runner.py  test_success_summary.py  test_validation_comprehensive.py
(+20 files in other folders)
